--- a/examples/iframe.html
+++ b/examples/iframe.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>iframe communication (iframe page)</title>
-    <script src="https://a.alipayobjects.com/static/arale/seajs/1.2.1/sea.js"></script>
-    <script src="http://aralejs.org/messenger/static/js/arale-helper.js"></script>
+    <script src="https://a.alipayobjects.com/seajs/1.3.1/sea.js"></script>
+    <script>
+    seajs.config({
+      alias: {
+        $: 'jquery/jquery/1.7.2/jquery'
+      }
+    });
+    </script>
     <style>
       pre { background-color: #ccc; color: #000; padding: 0.5em; }
     </style>
