--- a/tests/test-iframe.html
+++ b/tests/test-iframe.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>test</title>
-    <script src="https://a.alipayobjects.com/static/arale/seajs/1.2.1/sea.js"></script>
-    <script src="/static/js/arale-helper.js"></script>
+    <script src="https://a.alipayobjects.com/static/arale/seajs/1.3.1/sea.js"></script>
+    <script>
+    seajs.config({
+      alias: {
+        $: 'jquery/jquery/1.7.2/jquery'
+      }
+    });
+    </script>
   </head>
   <body>
-
     <script>
     seajs.use(['../src/messenger'], function(Messenger) {
         var messenger = new Messenger({
