--- a/tests/test-iframe.html
+++ b/tests/test-iframe.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>test</title>
-    <script src="https://a.alipayobjects.com/static/arale/seajs/1.3.1/sea.js"></script>
+    <script src="https://a.alipayobjects.com/seajs/1.3.1/sea.js"></script>
     <script>
     seajs.config({
       alias: {
